--- a/Source/Core/VideoBackends/OGL/OGL.vcxproj.filters
+++ b/Source/Core/VideoBackends/OGL/OGL.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="Render">
       <UniqueIdentifier>{696df73b-378e-4399-8f21-999b65d78dcd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GLExtensions">
+      <UniqueIdentifier>{4366f285-ded5-48c9-9464-03fb46174526}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\NativeVertexFormat.cpp">
@@ -54,6 +57,9 @@
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\SamplerCache.cpp" />
     <ClCompile Include="Src\stdafx.cpp" />
+    <ClCompile Include="Src\GLExtensions\GLExtensions.cpp">
+      <Filter>GLExtensions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\VertexManager.h">
@@ -94,6 +100,90 @@
     <ClInclude Include="Src\SamplerCache.h" />
     <ClInclude Include="Src\VideoBackend.h" />
     <ClInclude Include="Src\stdafx.h" />
+    <ClInclude Include="Src\GLExtensions\ARB_blend_func_extended.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_buffer_storage.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_debug_output.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_draw_elements_base_vertex.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_ES2_compatibility.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_framebuffer_object.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_get_program_binary.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_map_buffer_range.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_sample_shading.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_sampler_objects.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_sync.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_uniform_buffer_object.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_vertex_array_object.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\ARB_viewport_array.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_1_1.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_1_2.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_1_3.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_1_4.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_1_5.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_2_0.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_3_0.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_3_1.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_3_2.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\gl_common.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\GLExtensions.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\NV_framebuffer_multisample_coverage.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\NV_primitive_restart.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GLExtensions\KHR_debug.h">
+      <Filter>GLExtensions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
