--- a/Source/Core/VideoBackends/OGL/OGL.vcxproj
+++ b/Source/Core/VideoBackends/OGL/OGL.vcxproj
@@ -63,53 +63,35 @@
     <ClCompile Include="VertexManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
-    <ClInclude Include="Src\FramebufferManager.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_blend_func_extended.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_buffer_storage.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_debug_output.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_draw_elements_base_vertex.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_ES2_compatibility.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_framebuffer_object.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_get_program_binary.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_map_buffer_range.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_sampler_objects.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_sample_shading.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_sync.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_uniform_buffer_object.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_vertex_array_object.h" />
-    <ClInclude Include="Src\GLExtensions\ARB_viewport_array.h" />
-    <ClInclude Include="Src\GLExtensions\GLExtensions.h" />
-    <ClInclude Include="Src\GLExtensions\gl_1_1.h" />
-    <ClInclude Include="Src\GLExtensions\gl_1_2.h" />
-    <ClInclude Include="Src\GLExtensions\gl_1_3.h" />
-    <ClInclude Include="Src\GLExtensions\gl_1_4.h" />
-    <ClInclude Include="Src\GLExtensions\gl_1_5.h" />
-    <ClInclude Include="Src\GLExtensions\gl_2_0.h" />
-    <ClInclude Include="Src\GLExtensions\gl_3_0.h" />
-    <ClInclude Include="Src\GLExtensions\gl_3_1.h" />
-    <ClInclude Include="Src\GLExtensions\gl_3_2.h" />
-    <ClInclude Include="Src\GLExtensions\gl_common.h" />
-    <ClInclude Include="Src\GLExtensions\KHR_debug.h" />
-    <ClInclude Include="Src\GLExtensions\NV_framebuffer_multisample_coverage.h" />
-    <ClInclude Include="Src\GLExtensions\NV_primitive_restart.h" />
-    <ClInclude Include="Src\Globals.h" />
-    <ClInclude Include="Src\GLUtil.h" />
-    <ClInclude Include="Src\main.h" />
-    <ClInclude Include="Src\PerfQuery.h" />
-    <ClInclude Include="Src\PostProcessing.h" />
-    <ClInclude Include="Src\ProgramShaderCache.h" />
-    <ClInclude Include="Src\RasterFont.h" />
-    <ClInclude Include="Src\Render.h" />
-    <ClInclude Include="Src\SamplerCache.h" />
-    <ClInclude Include="Src\stdafx.h" />
-    <ClInclude Include="Src\StreamBuffer.h" />
-    <ClInclude Include="Src\TextureCache.h" />
-    <ClInclude Include="Src\TextureConverter.h" />
-    <ClInclude Include="Src\VertexManager.h" />
-    <ClInclude Include="Src\VideoBackend.h" />
-=======
     <ClInclude Include="FramebufferManager.h" />
+    <ClInclude Include="GLExtensions\ARB_blend_func_extended.h" />
+    <ClInclude Include="GLExtensions\ARB_buffer_storage.h" />
+    <ClInclude Include="GLExtensions\ARB_debug_output.h" />
+    <ClInclude Include="GLExtensions\ARB_draw_elements_base_vertex.h" />
+    <ClInclude Include="GLExtensions\ARB_ES2_compatibility.h" />
+    <ClInclude Include="GLExtensions\ARB_framebuffer_object.h" />
+    <ClInclude Include="GLExtensions\ARB_get_program_binary.h" />
+    <ClInclude Include="GLExtensions\ARB_map_buffer_range.h" />
+    <ClInclude Include="GLExtensions\ARB_sampler_objects.h" />
+    <ClInclude Include="GLExtensions\ARB_sample_shading.h" />
+    <ClInclude Include="GLExtensions\ARB_sync.h" />
+    <ClInclude Include="GLExtensions\ARB_uniform_buffer_object.h" />
+    <ClInclude Include="GLExtensions\ARB_vertex_array_object.h" />
+    <ClInclude Include="GLExtensions\ARB_viewport_array.h" />
+    <ClInclude Include="GLExtensions\GLExtensions.h" />
+    <ClInclude Include="GLExtensions\gl_1_1.h" />
+    <ClInclude Include="GLExtensions\gl_1_2.h" />
+    <ClInclude Include="GLExtensions\gl_1_3.h" />
+    <ClInclude Include="GLExtensions\gl_1_4.h" />
+    <ClInclude Include="GLExtensions\gl_1_5.h" />
+    <ClInclude Include="GLExtensions\gl_2_0.h" />
+    <ClInclude Include="GLExtensions\gl_3_0.h" />
+    <ClInclude Include="GLExtensions\gl_3_1.h" />
+    <ClInclude Include="GLExtensions\gl_3_2.h" />
+    <ClInclude Include="GLExtensions\gl_common.h" />
+    <ClInclude Include="GLExtensions\KHR_debug.h" />
+    <ClInclude Include="GLExtensions\NV_framebuffer_multisample_coverage.h" />
+    <ClInclude Include="GLExtensions\NV_primitive_restart.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="GLUtil.h" />
     <ClInclude Include="main.h" />
@@ -125,7 +107,6 @@
     <ClInclude Include="TextureConverter.h" />
     <ClInclude Include="VertexManager.h" />
     <ClInclude Include="VideoBackend.h" />
->>>>>>> master
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
