[GLExtensions] Make sure to initialize our function pointers with VideoSoftware as well.

--- a/Source/Core/VideoBackends/Software/CMakeLists.txt
+++ b/Source/Core/VideoBackends/Software/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SRCS	BPMemLoader.cpp
+set(SRCS	../OGL/GLExtensions/GLExtensions.cpp	
+			BPMemLoader.cpp
 			Clipper.cpp
 			SWCommandProcessor.cpp
 			CPMemLoader.cpp
