--- a/Data/Sys/GameSettings/GZWE01.ini
+++ b/Data/Sys/GameSettings/GZWE01.ini
@@ -5,8 +5,8 @@
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 3
-EmulationIssues = Need Save texture cache,graphic glitches
+EmulationStateId = 4
+EmulationIssues = 
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -27,4 +27,4 @@ PH_ZFar =
 
 [Video_Settings]
 SafeTextureCacheColorSamples = 512
-
+EFBScale = -1
