[GL-AutoChoose] Completely remove the cmake build options of USE_GLES/USE_GLES3. Dolphin will now build entirely with the ability to switch dyamically between GL and GLES.

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -228,11 +228,7 @@ if(_M_ARM)
 			)
 endif()
 
-set(LIBS bdisasm inputcommon videosoftware sfml-network)
-
-if(NOT USE_GLES OR USE_GLES3)
-	set(LIBS ${LIBS} videoogl)
-endif()
+set(LIBS bdisasm inputcommon videoogl videosoftware sfml-network)
 
 if(LIBUSB_FOUND)
 	# Using shared LibUSB
