[GLExtensions] Refix GLES3 build. Until we clean up the platform detection this'll need to be here.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,6 +354,8 @@ if(NOT ANDROID)
 
 	if(NOT USE_GLES3)
 		include(FindOpenGL)
+	else()
+		set(X11_FOUND 1)
 	endif()
 	
 	include(FindALSA OPTIONAL)
