VideoCommon: don't define uniform struct more than once
This will merge the uniform struct definition from ConstantManager and ShaderGenerator.

--- a/Source/Core/VideoCommon/VideoCommon.vcxproj
+++ b/Source/Core/VideoCommon/VideoCommon.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="PixelEngine.h" />
     <ClInclude Include="PixelShaderGen.h" />
     <ClInclude Include="ConstantManager.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="RenderBase.h" />
     <ClInclude Include="ShaderGenCommon.h" />
     <ClInclude Include="Statistics.h" />
