--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Src\HW\GCPadEmu.cpp" />
     <ClCompile Include="Src\HW\GPFifo.cpp" />
     <ClCompile Include="Src\HW\HW.cpp" />
+    <ClCompile Include="Src\HW\AMBaseboard.cpp" />
     <ClCompile Include="Src\HW\Memmap.cpp" />
     <ClCompile Include="Src\HW\MemmapFunctions.cpp" />
     <ClCompile Include="Src\HW\MemoryInterface.cpp" />
@@ -340,6 +341,7 @@
     <ClInclude Include="Src\HW\GCPadEmu.h" />
     <ClInclude Include="Src\HW\GPFifo.h" />
     <ClInclude Include="Src\HW\HW.h" />
+    <ClInclude Include="Src\HW\AMBaseboard.h" />
     <ClInclude Include="Src\HW\Memmap.h" />
     <ClInclude Include="Src\HW\MemoryInterface.h" />
     <ClInclude Include="Src\HW\ProcessorInterface.h" />
