Fixed F-Zero AX JVS/IO features Fixed controller input related bugs Removed unused variable Removed unused function declaration Updated CMakelist.txt

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -89,6 +89,7 @@ set(SRCS	Src/ActionReplay.cpp
 			Src/HW/DSPLLE/DSPLLE.cpp
 			Src/HW/DSPLLE/DSPLLETools.cpp
 			Src/HW/DVDInterface.cpp
+			Src/HW/AMBaseboard.cpp
 			Src/HW/EXI_Channel.cpp
 			Src/HW/EXI.cpp
 			Src/HW/EXI_Device.cpp
