Really terrible patch that gets elfs and dols in the game list.

--- a/Source/Core/DiscIO/CMakeLists.txt
+++ b/Source/Core/DiscIO/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SRCS	BannerLoader.cpp
 			VolumeCommon.cpp
 			VolumeCreator.cpp
 			VolumeDirectory.cpp
+			VolumeElf.cpp
 			VolumeGC.cpp
 			VolumeWad.cpp
 			VolumeWiiCrypted.cpp
